--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
         />
         <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-        <title>React App</title>
+        <title>Health and Fitness</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
